--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-youtube": "^10.1.0",
     "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.1"
